Add a photo pipeline

--- a/backend/api/.env.example
+++ b/backend/api/.env.example
@@ -3,3 +3,6 @@ SUPABASE_SERVICE_ROLE_KEY=
 SUPABASE_BUCKET=images
 SUPABASE_PUBLIC_BUCKET=true
 SUPABASE_SIGNED_URL_SECONDS=600
+GEMINI_API_KEY=
+GEMINI_MODEL=gemini-2.5-flash
+DEFAULT_THRESHOLD=0.75
