--- a/backend/shared/pyproject.toml
+++ b/backend/shared/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.10"
 dependencies = [
   "pydantic==2.8.2",
   "pydantic-settings==2.4.0",
+  "requests==2.32.5",
   "supabase==2.6.0",
 ]
 
